// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-popup #render should render component as expected (1) 1`] = `
<gux-popup>
  <template shadowrootmode="open">
    <div class="gux-target-container" aria-disabled="false">
      <slot name="target">
      </slot>
      <div class="gux-popup-container">
        <slot name="popup">
        </slot>
      </div>
    </div>
  </template>
  <gux-button slot="target">
    Target
  </gux-button>
  <gux-list slot="popup">
    <gux-list-item>
      Item 1
    </gux-list-item>
    <gux-list-item>
      Item 2
    </gux-list-item>
    <gux-list-item>
      Item 3
    </gux-list-item>
  </gux-list>
</gux-popup>
`;

exports[`gux-popup #render should render component as expected (2) 1`] = `
<gux-popup expanded="">
  <template shadowrootmode="open">
    <div class="gux-target-container" aria-disabled="false">
      <slot name="target">
      </slot>
      <div class="gux-popup-container gux-expanded">
        <slot name="popup">
        </slot>
      </div>
    </div>
  </template>
  <gux-button slot="target">
    Target
  </gux-button>
  <gux-list slot="popup">
    <gux-list-item>
      Item 1
    </gux-list-item>
    <gux-list-item>
      Item 2
    </gux-list-item>
    <gux-list-item>
      Item 3
    </gux-list-item>
  </gux-list>
</gux-popup>
`;

exports[`gux-popup #render should render component as expected (3) 1`] = `
<gux-popup disabled="">
  <template shadowrootmode="open">
    <div class="gux-target-container gux-disabled" aria-disabled="true">
      <slot name="target">
      </slot>
      <div class="gux-popup-container">
        <slot name="popup">
        </slot>
      </div>
    </div>
  </template>
  <gux-button slot="target">
    Target
  </gux-button>
  <gux-list slot="popup">
    <gux-list-item>
      Item 1
    </gux-list-item>
    <gux-list-item>
      Item 2
    </gux-list-item>
    <gux-list-item>
      Item 3
    </gux-list-item>
  </gux-list>
</gux-popup>
`;

exports[`gux-popup #render should render component as expected (4) 1`] = `
<gux-popup expanded="" disabled="">
  <template shadowrootmode="open">
    <div class="gux-target-container gux-disabled" aria-disabled="true">
      <slot name="target">
      </slot>
      <div class="gux-popup-container">
        <slot name="popup">
        </slot>
      </div>
    </div>
  </template>
  <gux-button slot="target">
    Target
  </gux-button>
  <gux-list slot="popup">
    <gux-list-item>
      Item 1
    </gux-list-item>
    <gux-list-item>
      Item 2
    </gux-list-item>
    <gux-list-item>
      Item 3
    </gux-list-item>
  </gux-list>
</gux-popup>
`;
